wp-content/themes/vantage/partystart.css
/* ... */
#pgc-2-3-0 #members-list li {
    margin-left: 7px;
    width: 200px;
    height: 200px;
    float: left;
    position: relative;
    list-style: none;
    overflow: hidden;
}

#buddypress ul.item-list li {
    padding: none !important;
}

#buddypress ul.item-list li div.item-title span {
    color: #fff!important;
}
.member-filter{
    -moz-border-radius-topleft: 5px;
    /* -webkit-border-top-left-radius: 5px; */
    /* border-top-left-radius: 5px; */
    -moz-border-radius-topright: 5px;
    /* -webkit-border-top-right-radius: 5px; */
    /* border-top-right-radius: 5px; */
    /* background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.6))); */
    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    -webkit-transition: all 300ms;
    -moz-transition: all 300ms;
    transition: all 300ms;
}
#buddypress #members-list li:hover .member-filter{
    background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index:99;
}
#members-list li .musikertype {
z-index:100!important;
    width: 40px;
    position: absolute;
    /* background: #303030 none repeat scroll 0% 0%; */
    color: #FFF;
    padding-top: 5px;
    z-index: 10;
    float: left;
    bottom: 0px;
    padding-bottom: 5px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    padding-top: 13px;
    border: 2px solid white;
    top: -120px;
    left: 89px;
}

#members-list li .item-avatar img {
    width: 100%;
    height: 100%;
}

/*
#pgc-2-3-0 #members-list li .item .item-title {
    text-align: center;
    width: 100%;
}
*/
#members-list li .item .item-title a {
    /*color: white;
    text-decoration: none;
    padding-top: 5px;
    padding-bottom: 5px; */
    /* margin: auto;
     text-align: center;
     position: absolute;
     bottom: 0px;
     background: rgba(47, 48, 51, 0.8) none repeat scroll 0% 0%;
     width: 100%;
     left: 0px; */
    margin: auto !important;
    line-height: 1;
    color: rgb(48,48,48) !important;
    text-decoration: none;
}

.brukernavnmeldemsiden a{
    text-decoration: none;
    color:white!important;
    font-weight:600;
    z-index:100 !important;
}


#pgc-2-3-0 #members-list li .item .item-meta .activity {
    opacity: 0;
}

#expandBtnonomss {
    margin: auto;
    text-align: center;
    color: #2F3033;
    border: 2px solid #2F3033;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 15px;
    padding-bottom: 15px;
    text-decoration: none;
}

#expandBtnonomss:hover {
    background: #2F3033;
    color: White;
}

#omOssBtnContainer {
    text-align: center;
}

#omOssBtnContainer .hidden-content {
    text-align: left;
}

/*Registerer bruker*/
#signupformheader {
    font-size: 1.7em;
    text-align: center;
    line-height: 1.5;
    margin-bottom: 10px;
}

#signuptekst {
    width: 100%;
    text-align: left;
}

.register-section {
    width: 100% !important;
}

.register-section label {
    width: 29% !important;
    float: left;
    margin-top: 20px;
}

.register-section input[type="text"], .register-section input[type="email"], .register-section input[type="password"] {
    width: 70% !important;
    margin-top: 15px;
}

.register-section .checkbox label {
    float: none;
}

.register-section .radio {
    width: 100%;
    float: left;
}

#field_111_0 {
    margin-top: 10px;
}

.register-section .radio label {
    float: none;
}

.register-section .radio a.clear-value {
    display: none !important;
}

/*LOGG INN SIDE*/
.login-username, .login-password, .login-remember, .login-submit {
    margin-bottom: 1.5em;
    margin-left: auto;
    margin-right: auto;
    /* float: left; */
    position: relative;
    font-size: 150%;
    text-align: center;
}

.login-remember label {
    font-size: 70%;
}

.login-username, .login-password {
    padding: 0px !important;
    margin-bottom: 1px !important;
}

.login-username input, .login-password input {
    padding: 10px !important;
    width: 90%;
}

.login-username input:focus, .login-password input:focus {
    background: white !important;
}

.login-remember {
    margin-top: 10px;
}

.login-submit input {
    width: 90% !important;
    background: rgb(92, 191, 40) !important;
    color: white !important;
    text-shadow: none !important;
    font-size: 100% !important;
}

.login-submit input:hover {
    width: 92% !important;

}

#loginform {
    width: 100%;
    max-width: 400px;
    margin: auto;
}

.login-username label, .login-password label {
    display: none;
}

#logginnBeskrivelse {
    width: auto;
    max-width: 400px;
    margin: auto;
    position: relative;
}

#logginnBeskrivelse h1 {
    font-style: bold;
    font-size: 200%;
    margin: auto;
    text-align: center;
    margin-bottom: 10px;
    font-family: inherit;
}

#logginnBeskrivelse p {
    font-style: oblique;
}

#bps_directory593 input {
    margin-right: 5px;
}

.job-manager-form fieldset small.description {
    font-size: 1em !important;
    margin: 0.3em 0 0 !important;
}

.return-to-shop button {
    display: none;
}
/* ... */

